--- a/PushNotification/src/main/resources/application.properties
+++ b/PushNotification/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=PushNotification
+server.port=8081
+spring.datasource.url = jdbc:mysql://localhost:3306/push_notification?createDatabaseIfNotExist=true
+
+spring.datasource.username = root
+spring.datasource.password = root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto= update
+spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
+spring.jpa.open-in-view=true
+spring.jpa.properties.hibernate.format_sql=true
